Complete: get events, align events in frontend. Bug: topSpace of the events, if event end in SAT event got extra 2 days

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,42 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 :root {
-    /* color-scheme: light;
-    --primary: rgb(26, 115, 232);
-    --primary-container: rgb(66, 133, 244);
-    --on-primary: #fff;
-    --secondary: rgb(232, 240, 254);
-    --secondary-container: rgb(210, 227, 252);
-    --on-secondary: rgb(25, 103, 210);
-    --on-secondary-container: rgb(24, 90, 188);
-    --surface: #fff;
-    --surface-transparent: rgba(255, 255, 255, 0);
-    --surface-container: #fff;
-    --surface-container-high: #fff;
-    --surface-container-low: #fff;
-    --on-surface: rgb(60, 64, 67);
-    --on-surface-variant: rgb(95, 99, 104);
-    --on-surface-variant-agm: #70757a;
-    --background: #fff;
-    --on-background: rgb(32, 33, 36);
-    --textfield-surface: rgb(241, 243, 244);
-    --textfield-primary: rgb(25, 103, 210);
-    --textfield-hairline: rgb(128, 134, 139);
-    --textfield-error: rgb(197, 34, 31);
-    --error: rgb(217, 48, 37);
-    --on-error: #fff;
-    --shadow-1: 0px 1px 2px 0px rgba(60, 64, 67, 0.3),
-      0px 1px 3px 1px rgba(60, 64, 67, 0.15);
-    --shadow-5: 0px 4px 4px 0px rgba(60, 64, 67, 0.3),
-      0px 8px 12px 6px rgba(60, 64, 67, 0.15);
-    --fab: rgba(255, 255, 255, 0.502);
-    --fab-hover: #f6fafe;
-    --dimmed: rgba(32, 33, 36, 0.38);
-    --chip-hover: rgb(241, 243, 244);
-    --now: rgb(234, 67, 53);
-    --local-override-container: rgb(254, 247, 224);
-    --local-override-focus-active-indicator: rgb(242, 153, 0); */
-    /* own */
-
     --outline-variant: rgb(218, 220, 224);
 
     --bg-light: #ffffff;
